# lifeos

./: .gitignore  AGENT_DESIGN.md  CHANGELOG.md  HERMES_INTEGRATION.md  IMPLEMENTATION_SUMMARY.md  QUICK_REFERENCE.md  README.md  TESTING.md  VISION.md  pyproject.toml
examples/: agentic_demo.py
lifeos/: __init__.py  agent_protocol.py  agentic.py  cli.py  core.py  physics.py
schemas/: README.md  buy.js  death1.json  life1.json  life1.md  life2.json  life2.md  life3.json  life4.json
scripts/: install_skills.sh
skills/: README.md
skills/lifeos-agent-operations/: SKILL.md
skills/lifeos-agentic-operations/: SKILL.md
