[project]
name = "lifeos"
version = "0.1.0"
description = "LifeOS: A Universal Life Context Engine for Agentic Systems"
authors = [
    {name = "LifeOS Team"}
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "pydantic>=2.0.0",
    "jsonschema>=4.0.0",
    "click>=8.0.0",
    "rich>=13.0.0",
    "pyyaml>=6.0.0",
]

[project.scripts]
lifeos = "lifeos.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["lifeos"]
